[package]
name = "stock_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.0"
plotters = "0.3.5"
yahoo_finance_api = "2.1.0"
yahoo-finance = "0.3.0"
time = "0.3.34"
tokio = "0.2.1"
